--- a/public/global.css
+++ b/public/global.css
@@ -13,6 +13,12 @@ body {
 	padding: 8px;
 	box-sizing: border-box;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	-ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+	overflow-y: hidden;
+}
+body::-webkit-scrollbar {
+  display: none;
 }
 
 a {
